[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
replit = "^3.2.4"
Flask = "^2.1.3"
bs4 = "^0.0.1"
lyricsgenius = "^3.0.1"
httpsproxy_urllib2 = "^1.0"
pandas = "^1.5.3"
plotly = "^5.13.1"
dash = "^2.8.1"
dash-core-components = "^2.0.0"
dash-html-components = "^2.0.0"
textblob = "^0.17.1"
ujson = "^5.7.0"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"